# GenAI

class1/assignment2/: tokenizer.py  tokenizers.py
class10-langraph/: README.md  main.py  pyproject.toml
class2/assignment/: requirements.txt
class2/classwork/: chat-gemini.py
class3/assignment/: app.js  automated_terminal.py  check-gemini.py  hello.py  main.py  new.py  requirements.txt
class3/classwork/: chat-gemini.py  package.json  requirements.txt
class4-fine_tuning/: Readme.md
class5/: main.py  rag.py  requirements.txt
class5-basic_rag/: main.py  pdf_answering_rag.py  rag.py
class6-query_translation(type of rag)/: Readme.md
class6-query_translation(type of rag)/Basic_rag/: injection.py  main.py  pyproject.toml
class6-query_translation(type of rag)/Basic_rag/other_query_tranformation_code/: cot.py  fanout.py
class6-query_translation(type of rag)/Fan_out/: main.py  text.md
class6-query_translation(type of rag)/Reciprocrate_Rank-fusion/: main.py  text.md
class7-query_routing/: main.py  pyproject.toml  routing.md
class8-knowledge_graph/: README.md  main.py  pyproject.toml
class9-tracing/: pyproject.toml
classTwo/assignment/: HiteshSirChat.py  System.txt  requirements.txt
classTwo/classwork/: chat-gpt.py
common/: main.py
